sistema de autenticação por papeis implantado
